--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset='utf-8' />
-    <title>Police Use of Force - 2013-14 </title>
+    <title>Oakland PDP use of force: 2013-2014 </title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.0/mapbox.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.0/mapbox.css' rel='stylesheet' />
@@ -13,11 +13,7 @@
 </head>
 <body>
 
-<div id='map-main' class='map'> </div>
-<script>
-
-L.mapbox.accessToken = 'pk.eyJ1IjoidWdvdHNvdWwiLCJhIjoiYjc2ODRjMTQzNTYxMWNjZTljODNkZGNjMzFmODAxZWEifQ.0LTCDVaFJRMQ7BBjcb8nsg';
-L.mapbox.map('map-main', 'ugotsoul.milaolm5').setView([37.8, -122.3], 10);
-</script>
+<div id='map-main' class='map'></div>
+<script src="js/main.js"></script>
 </body>
 </html>
